--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,5 +1,4 @@
-<h1>Appointments#show</h1>
-<p>Find me in app/views/appointments/show.html.erb</p>
-<%= link_to @appointment.doctor.name,doctor_path(@doctor) %>
+
+<%= link_to @appointment.doctor.name, doctor_path(doctor) %>
 
 
