--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,4 +1,6 @@
 
-<%= link_to @appointment.doctor.name, doctor_path(doctor) %>
+<%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor) %>
+<%= link_to @appointment.patient.name, patient_path(@appointment.patient) %>
+<%= human_readable_datetime(@appointment.appointment_datetime)%>
 
 
