--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,2 +1,10 @@
 <h1>Doctors#show</h1>
 <p>Find me in app/views/doctors/show.html.erb</p>
+<%= @doctor.name %>
+<%= @doctor.department %>
+<% @doctor.appointments.each do |appointment| %>
+<%= appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M") %>
+<% @doctor.patients.each do |patient|%>
+<%= link_to patient.name patient_path(@doctor.patient)%>
+<%end%>
+<% end %>
