--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -4,7 +4,8 @@
 <%= @doctor.department %>
 <% @doctor.appointments.each do |appointment| %>
 <%= appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M") %>
-<% @doctor.patients.each do |patient|%>
-<%= link_to patient.name patient_path(@doctor.patient)%>
-<%end%>
+<% @doctor_patient = @doctor.patients.find(appointment.patient_id)%>
+<%= link_to @doctor_patient.name, patient_path(@doctor_patient)%>
 <% end %>
+
+
