--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,2 +1,7 @@
 <h1>Patients#show</h1>
 <p>Find me in app/views/patients/show.html.erb</p>
+<%patient.appointments.each do |appointment|%>
+<%=appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M") %>
+<% @doctor_patient = @patient.doctors.find(appointment.doctor_id)%>
+<%= link_to @doctor_patient.name, doctor_path(@doctor_patient)%>
+<%end%>
