--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -3,5 +3,5 @@
 <%patient.appointments.each do |appointment|%>
 <%=appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M") %>
 <% @doctor_patient = @patient.doctors.find(appointment.doctor_id)%>
-<%= link_to @doctor_patient.name, patient_path(@doctor_patient)%>
+<%= link_to @doctor_patient.name, doctor_path(@doctor_patient)%>
 <%end%>
