--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Patients#show</h1>
+<h1>Patients</h1>
 <p>Find me in app/views/patients/show.html.erb</p>
 <%patient.appointments.each do |appointment|%>
 <%=appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M") %>
