--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,6 +1,6 @@
 <%= @patient.name %>
 
-<% patient.appointments.each do |appointment| %>
+<% @patient.appointments.each do |appointment| %>
 
 <%= appointment.appointment_datetime.strftime("%B %d, %Y at %k:%M") %>
 
